# the-club

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  style.css
prisma/: dev.db  reset-admin-password.ts  schema.prisma  seed.ts  simulate-300.ts
prisma/migrations/20260614120000_add_recovery_phrase_hash/: migration.sql
prisma/migrations/20260615100000_add_rate_limit_attempts/: migration.sql
prisma/migrations/20260616183000_add_recovery_question/: migration.sql
public/: manifest.json  sw.js
scripts/: fix-tauri-assets.mjs
src/: routeTree.gen.ts  router.tsx  start.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: postrm.sh
src-tauri/nsis/: uninstaller.nsh
src-tauri/src/: main.rs
src/components/: DownloadSuccessDialog.tsx  Footer.tsx  Header.tsx  LocalDataResetPanel.tsx  UpdateNotice.tsx
src/lib/: api.functions.ts  api.ts  auth.server.ts  desktop-api.test.ts  desktop-api.ts  export-preferences.ts  update-check.test.ts  update-check.ts
src/routes/: __root.tsx  about.tsx  index.tsx  login.tsx  profile.tsx  setup.tsx
src/routes/admin/: attendance.tsx  create.tsx  impostazioni.tsx  index.tsx  presenze.tsx  riepilogo.tsx  scanner.tsx
