[package]
name = "the-club"
version = "1.0.35"
description = "The Club - Club Privato Management"
edition = "2021"
authors = ["Francesco Dell'Orto"]
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
